# ChangeLog for sci-mathematics/octave
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.97 2010/10/03 23:45:04 bicatali Exp $

*octave-3.2.4-r3 (03 Oct 2010)

  03 Oct 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +octave-3.2.4-r3.ebuild, +files/octave-3.2.4-addpath.patch,
  +files/octave-3.2.4-filter-empty-vector.patch,
  +files/octave-3.2.4-imshow.patch, +files/octave-3.2.4-interp2.patch,
  +files/octave-3.2.4-no-helvetica.patch,
  +files/octave-3.2.4-normal-marker-size.patch:
  Added a few patches from upstream and debian. Should pass tests now.

*octave-3.2.4-r2 (14 Sep 2010)

  14 Sep 2010; Sébastien Fabbro <bicatali@gentoo.org>
  +octave-3.2.4-r2.ebuild, +files/octave-3.2.4-dlmread-speedup.patch:
  Speed-up of dlmread function from upstream trunk. Thanks Fabio Rossi for
  his input, bug #337126

  09 Jul 2010; Kacper Kowalik <xarthisius@gentoo.org>
  -octave-2.1.73-r1.ebuild, -files/octave-2.1.73-f2c-fix.patch,
  -files/octave-2.1.73-gcc4.1-gentoo.patch, -files/octave-example-fix.patch:
  Remove old

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  octave-3.2.4-r1.ebuild:
  ppc64 stable wrt #318649

  24 Jun 2010; Sébastien Fabbro <bicatali@gentoo.org>
  -files/octave-2.1.72-gcc4.1-gentoo.patch, -octave-2.1.73.ebuild,
  -octave-2.1.73-r2.ebuild, -files/octave-2.1.73-gcc-4.3.patch,
  -files/octave-3.0.0-pkg.patch,
  -files/octave-3.0.1-fix_handle_for_plotyy.patch,
  -files/octave-3.0.1-no_helvetica.patch, -octave-3.0.3.ebuild,
  -files/octave-3.0.3-test-fix.patch, -files/octave-3.2.0-dlmwrite.patch:
  Cleaning old versions

  23 Jun 2010; Justin Lecher <jlec@gentoo.org> octave-2.1.73.ebuild,
  octave-2.1.73-r1.ebuild:
  Fix check if mpich2 is not installed, #224913

  13 Jun 2010; Raúl Porcel <armin76@gentoo.org> octave-3.2.4-r1.ebuild:
  alpha/sparc stable wrt #318649

  24 May 2010; <nixnut@gentoo.org> octave-3.2.4-r1.ebuild:
  ppc stable #318649
