@@ -16,13 +16,13 @@ AUX octave-3.2.4-normal-marker-size.patch 776 RMD160 f9c88f1e4eaa57dc4e344cfaa39
 DIST octave-3.2.4.tar.bz2 12080959 RMD160 6dcdea7ef2431b8427da5e6b9d2113e0e5736f43 SHA1 7de078564027108f3436f3ba7bf5993a6b411a67 SHA256 48471d05c7ed9c0a5a4d5fa4ae8a857447ac3da1197f86cfe79b9d8f4fdfd147
 EBUILD octave-3.2.4-r1.ebuild 2916 RMD160 b8e2702847466a31de7a319942bee14ef152e456 SHA1 5ffd2c5592fadf6fb82e7f059b94833b12410da9 SHA256 5af9b4269f7da8d4d70f4c9a5ef3e85525816ef70c8e8a95a002d292ae727848
 EBUILD octave-3.2.4-r2.ebuild 2978 RMD160 a3fa8bd8941d2176387fba81a1faf2004880a737 SHA1 9f0b8e54ec366fcc71cbcf79141459f057d59722 SHA256 474c200dddb67b78e5951b0419851aeb8ef8fb369dc8a162c08cac715f1837bd
-EBUILD octave-3.2.4-r3.ebuild 3293 RMD160 53a91adf82c43d33372ec598a10e0c1dfed190c6 SHA1 8403e5547a100a9ff102ed059689d8c2cd7cce11 SHA256 df8715ad025deccc75f9582d48806fbc6d986a12d68e7f880b3816417755e59d
-MISC ChangeLog 24572 RMD160 080e1144148bb0224996a8117b5e37f9fe4fe6c5 SHA1 e602731c69f4dd7602a8ad4588b23281c936a604 SHA256 c231df3e95e5af291f432a5d491399b668fd25fc06141fad79d2bc42cff64b36
+EBUILD octave-3.2.4-r3.ebuild 3234 RMD160 82246f4b820f6eeed320e579fda9049dc6ba8ff4 SHA1 423c11bc79f73e157081277cbcb90735b72e6bcf SHA256 8b8622e6b4b75ab2b0cd468f45fa5b69d5973407d90d6abd1ed28755aa515e8e
+MISC ChangeLog 24707 RMD160 d3cf6254894ec6d8970d3d4a3ea2368e0dc24480 SHA1 6376c2f28ef5a3c80b38fbff11eb0cb5e6db3118 SHA256 092f0e5ba3308a6db91dece9ac02016081d78c6a9cf32df8dce4f71e85b768f3
 MISC metadata.xml 260 RMD160 27a4292b758e1199d0092b731cba79033f1b4167 SHA1 9997a99a4d6115f3b901208ba711d735ce9be36e SHA256 5fda55fd44bfec5755e1c3ac828887c37f0eebed6b3b972454e123ac2472d3ff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkypFYgACgkQ1ycZbhPLE2BqlACfRplLUebkkdsI3vDUkTx52Pt1
-2CcAoKtHthhEhCNgrDvojQhgnsoCbaU9
-=wnmT
+iEYEARECAAYFAkzO9sIACgkQ1ycZbhPLE2C3agCfVQUhu2Ys5eNQQF4yhSw9Fzeq
+jm8AnisGoSz5mu/UBJ7i6W7bDJycRHdA
+=66J3
 -----END PGP SIGNATURE-----
