@@ -1,6 +1,10 @@
 # ChangeLog for sci-mathematics/octave
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.97 2010/10/03 23:45:04 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.98 2010/11/01 17:19:54 bicatali Exp $
+
+  01 Nov 2010; Sébastien Fabbro <bicatali@gentoo.org>
+  octave-3.2.4-r3.ebuild:
+  Force OpenGL, which is needed anyway for all cases
 
 *octave-3.2.4-r3 (03 Oct 2010)
 
